--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <section id="home" class="hero">
     <div class="container">
       <div class="hero-content">
-        <h1>Acidgorgon</h1>
-        <span>Roblox Developer</span>
+        <h1> Acidgorgon</h1>
+        <span><div class="job-title"> Roblox Developer</div></span>
         <div>
           <a href="#projects" class="btn">My Projects</a>
           <a href="#contact" class="btn btn-white">Contact</a>
